TestCloneAccessStressGCM fails with -XX:-ReduceBulkZeroing

XMLWordPrintable

    • b05

        java.lang.RuntimeException: Return value not 36. Got: 0; additional check: 36
        at compiler.arraycopy.TestCloneAccessStressGCM.main(TestCloneAccessStressGCM.java:58)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
        at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.base/java.lang.reflect.Method.invoke(Method.java:564)
        at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
        at java.base/java.lang.Thread.run(Thread.java:832)

              Assignee:
              Christian Hagedorn
              Reporter:
              Tobias Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: