8248226: TestCloneAccessStressGCM fails with -XX:-ReduceBulkZeroing

Taking GC barriers into account in LoadNode::find_previous_arraycopy() when ReduceInitialCardMarks is disabled.

Reviewed-by: kvn, roland